[package]
name = "doc-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
axum = { version = "0.7.4", default-features = false, features = ["http1", "tokio", "tracing", "tower-log"] }
mimalloc = "0.1.39"
tokio = { version = "1.36.0", features = ["net", "rt", "macros"] }
tower-http = { version = "0.5.2", features = ["fs", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[profile.release]
split-debuginfo = "unpacked"
lto = "thin"
codegen-units = 1
strip = true

[profile.dev]
split-debuginfo = "unpacked"
