[package]
name = "doc-server"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
axum = { version = "0.7.4", default-features = false, features = [
    "http1",
    "tokio",
    "tracing",
    "tower-log",
] }
clap = { version = "4.5.4", features = ["derive"] }
debounced = "0.1.0"
futures-util = "0.3.30"
inotify = "0.10.2"
mimalloc = "0.1.39"
tokio = { version = "1.36.0", features = [
    "net",
    "rt",
    "macros",
    "process",
], default-features = false }
tower-http = { version = "0.5.2", features = ["fs", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[profile.release]
debug = false
lto = "fat"
strip = true

[profile.dev]
split-debuginfo = "unpacked"
